# customvision-classification

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/cv_classify/: __init__.py  cli.py  config.py  predict.py
